--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,12 @@
 
       <!-- Chat-->
       {% include "ui/chat.html" %}
+
       <!-- Itens shortcut-->
+      {% include "ui/itens_shorcut.html" %}
 
       <!-- Menu (inventory, market, map, etc)-->
+       {% include "ui/menu.html" %}
     </div>
   </body>
 </html>
