--- a/templates/ui/chat.html
+++ b/templates/ui/chat.html
@@ -1,16 +1,32 @@
 <div class="ui-card chat-panel">
-    <div class="chat-messages">
-        <div class="message">
-            <span>João: </span>
-            <span>Olá, como vai?</span>
-        </div>
-         <div class="message">
-            <span>Maninho: </span>
-            <span>eae</span>
-        </div>
+  <div class="chat-messages">
+    <div class="message">
+      <span>João: </span>
+      <span>Ops?</span>
     </div>
+    <div class="message">
+      <span>Maninho: </span>
+      <span>eae</span>
+    </div>
+    <div class="message">
+      <span>Duck: </span>
+      <span>Oi</span>
+    </div>
+    <div class="message">
+      <span>Tinho: </span>
+      <span>opa</span>
+    </div>
+    <div class="message">
+      <span>Baum: </span>
+      <span>salve</span>
+    </div>
+    <div class="message">
+      <span>Bryan: </span>
+      <span>Eba</span>
+    </div>
+  </div>
 
-    <div class="input">
-        <input type="text" placeholder="Enter para enviar...">
-    </div>
+  <div class="input">
+    <input type="text" placeholder="Enter para enviar..." />
+  </div>
 </div>
