--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -1,5 +1,9 @@
 html, body {margin: 0; padding: 0; height: 100%;}
 
+*{
+  box-sizing: border-box;
+}
+
 .flex{
     display: flex;
 }
@@ -14,6 +18,7 @@ html, body {margin: 0; padding: 0; height: 100%;}
   background-color: antiquewhite;
   padding: 1rem;
   border-radius: 10px;
+  display: inline-block;
 }
 
 .mb {
