--- a/templates/ui/chat.html
+++ b/templates/ui/chat.html
@@ -1,27 +1,27 @@
 <div class="ui-card chat-panel">
   <div class="chat-messages">
-    <div class="message">
-      <span>João: </span>
+    <div class="message mb-2">
+      <span class="user-name">João: </span>
       <span>Ops?</span>
     </div>
-    <div class="message">
-      <span>Maninho: </span>
+    <div class="message mb-2">
+      <span class="user-name">Maninho: </span>
       <span>eae</span>
     </div>
-    <div class="message">
-      <span>Duck: </span>
+    <div class="message mb-2">
+      <span class="user-name">Duck: </span>
       <span>Oi</span>
     </div>
-    <div class="message">
-      <span>Tinho: </span>
+    <div class="message mb-2">
+      <span class="user-name">Tinho: </span>
       <span>opa</span>
     </div>
-    <div class="message">
-      <span>Baum: </span>
+    <div class="message mb-2">
+      <span class="user-name">Baum: </span>
       <span>salve</span>
     </div>
-    <div class="message">
-      <span>Bryan: </span>
+    <div class="message mb-2">
+      <span class="user-name">Bryan: </span>
       <span>Eba</span>
     </div>
   </div>
