--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -1,18 +1,28 @@
-html, body {margin: 0; padding: 0; height: 100%;}
-
-*{
+* {
   box-sizing: border-box;
+  user-select: none;
 }
 
-.flex{
-    display: flex;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-.flex-between{
-    justify-content: space-between;
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-.ui-card{
+.flex {
+  display: flex;
+}
+
+.flex-between {
+  justify-content: space-between;
+}
+
+.ui-card {
   width: 200px;
   border: 2px solid black;
   background-color: antiquewhite;
@@ -22,5 +32,28 @@ html, body {margin: 0; padding: 0; height: 100%;}
 }
 
 .mb {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mb-2 {
+  margin-top: 0.5rem;
+}
+
+/* Base game UI */
+.game-container,
+.ui-container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.game-container {
+  background-color: black;
+  z-index: 1;
+}
+
+.ui-container {
+  z-index: 2;
 }
