--- a/templates/ui/user_panel.html
+++ b/templates/ui/user_panel.html
@@ -1,14 +1,12 @@
 <div class="ui-card user-panel">
   <div class="flex flex-between mb">
-    <div>
-      <span>João</span>
-    </div>
-    <div>
-      <span>Lv 1</span>
-    </div>
+    <div id="user-name">João</div>
+    <div id="user-level">Lv 1</div>
   </div>
   <div class="flex">
-    <div class="stats-bar hp">100/100</div>
+    <div class="stats-bar hp">
+      <div class="stats-bar-fill hp">100/100</div>
+    </div>
   </div>
   <div class="flex">
     <div class="stats-bar mana">100/100</div>
