--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,20 @@
     <link rel="stylesheet" href="{{ url_for('static', path='css/UI-CSS/general-ui.css')}}" />
   </head>
   <body>
-    <div class="game-container">
-      <!-- gameame -->
-      {% include "game/game.html" %}
-    </div>
-
-    <div class="ui-container">
+    <div class="ui-container-header">
       <!-- User Panel -->
       {% include "ui/user_panel.html" %}
 
       <!-- Selected enemy-->
       {% include "ui/enemy_panel.html" %}
+    </div>
 
+    <div class="game-container">
+      <!-- gameame -->
+      {% include "game/game.html" %}
+    </div>
+
+    <div class="ui-container-footer">
       <!-- Chat-->
       {% include "ui/chat.html" %}
 
@@ -41,5 +43,11 @@
       <!-- Menu (inventory, market, map, etc)-->
       {% include "ui/menu.html" %}
     </div>
+
+    <script src="{{ url_for('static', path='js/player.js') }}"></script>
+    <script src="{{ url_for('static', path='js/enemy.js') }}"></script>
+    <script src="{{ url_for('static', path='js/battle.js') }}"></script>
+    <script src="{{ url_for('static', path='js/game.js') }}"></script>
+    <script src="{{ url_for('static', path='js/events.js') }}"></script>
   </body>
 </html>
