--- a/templates/ui/enemy_panel.html
+++ b/templates/ui/enemy_panel.html
@@ -1,13 +1,11 @@
 <div class="ui-card enemy-panel">
   <div class="flex flex-between mb">
-    <div>
-      <span>Globin</span>
-    </div>
-    <div>
-      <span>Lv 1</span>
-    </div>
+    <div id="enemy-name">Globin</div>
+    <div id="enemy-level">Lv 1</div>
   </div>
   <div class="flex">
-    <div class="stats-bar hp">100/100</div>
+    <div class="stats-bar hp">
+      <div class="stats-bar-fill hp">100/100</div>
+    </div>
   </div>
 </div>
