--- a/templates/ui/enemy_panel.html
+++ b/templates/ui/enemy_panel.html
@@ -1,6 +1,6 @@
 <div class="ui-card enemy-panel">
   <div class="flex flex-between mb">
-    <div id="enemy-name">Globin</div>
+    <div id="enemy-name">Zumbi</div>
     <div id="enemy-level">Lv 1</div>
   </div>
   <div class="flex">
